# project configuration, use poetry
[tool.poetry]
name = "lohrasb"
version = "2.0.1"
description = "Using optuna search optimizer to estimate best tree based estimator compatible with scikit-learn"
authors = ["drhosseinjavedani <h.javedani@gmail.com>"]
homepage = "https://github.com/drhosseinjavedani/lohrasb"
license = "BSD-3-Clause license"

readme = "README.md"
keywords = [
    "Auto ML",
    "Pipeline",
    "Machine learning"
]


[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.20"
scipy = "^1.5"
optuna = "^2.10.1"
xgboost = "^1.6.1"
imblearn = "^0.0"
lightgbm = "^3.3.2"
nox = "^2022.1.7"
feature-engine = "^1.4.1"
category-encoders = "^2.5.0"
pandas = "^1.4"
xgbse = "^0.2.3"
pycox = "^0.2.3"
pyarrow = "^10.0.1"
sklearn = "^0.0.post1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"
nox = "^2022.1.7"
bump2version = "^1.0.1"
isort = "^5.10.1"
pytest = "^7.1.2"
ipykernel = "^6.15.2"

[tool.poetry.group.dev.dependencies]
IProgress = "^0.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
